# Hydra

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PR_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.separated.yml  docker-compose.worker.go.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_improvements.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
HydraWorker/: HydraWorker.csproj  Program.cs  Worker.cs
cli/: __main__.py  _client.py  _output.py
doc/: API_AUDIT_SUMMARY.md  API_REFERENCE.md  NEW_ENDPOINTS.md  architecture.md  design-executor-improvements.md
docs/: IMPROVEMENTS.md  IMPROVEMENTS_DIAGRAM.md  README.md  architecture.md  design-executor-improvements.md  windows-worker-bootstrap.md
go-worker/: Dockerfile  README.md  go.mod  main.go
scheduler/: main.py  mongo_client.py  orchestrator.py  orchestrator_entrypoint.py  requirements.txt  run_events.py  scheduler.py  startup.py
scripts/: configure-external-redis-acl.sh  diagnose-domain-admin.sh  hydra-apply.py  provision-redis-acl.sh  start-domain-workers.sh  test_endpoints_manual.py
tests/: test_admin_domain_rules.py  test_ai.py  test_control_plane.py  test_job_improvements.py  test_new_endpoints.py  test_run_events.py  test_scheduler.py  test_security.py  test_worker.py  test_worker_bootstrap.py
ui/: cypress.config.ts  index.html  package-lock.json  package.json
worker/: __main__.py  bootstrap.py  config.py  executor.py  redis_client.py  requirements.txt  windows_tasks.py  worker.py
(+106 files in other folders)
