[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "croniter>=6.2.2",
    "cryptography>=46.0.6",
    "fastapi>=0.135.2",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "pytest>=9.0.2",
    "redis==5.0.8",
]

[tool.setuptools.packages.find]
include = ["worker*"]
